Gnome 43: Fix double borders and white text in context menus

--- a/gtk-4.0/widgets/_popovers.scss
+++ b/gtk-4.0/widgets/_popovers.scss
@@ -15,7 +15,13 @@
     background-clip: padding-box;
     border: 1px solid $borders_color;
     box-shadow: 0 4px 6px transparentize(black, 0.6);
+    color: $red;
+    label, button {
+      color:$fg_color;
+    }
   }
+
+  button { @extend %button; }
 
   &:backdrop {
     background-color: transparent;
@@ -114,7 +120,7 @@ popover.menu {
 
   & > arrow,
   &.background > contents {
-    background-color: $popover_bg_color;
+    background-color: $red;
     color: $fg_color;
     padding: 5px;
   }
